# ProjectScanner

./: README.md  app.py  pyproject.toml
displayer/: graph.py
scanner/: main.py
scanner/file_sys_workers/: dir_worker.py  file_worker.py
