[tool.poetry]
name = "projectscanner"
version = "0.1.0"
description = ""
authors = ["nikkitkit007 <nikkitkit0707@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.0"
matplotlib = "^3.6.3"
pandas = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
